--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,16 +1,9 @@
+.app {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  padding: 2% 5%;
 }
 
 .App-header {
@@ -24,15 +17,72 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  background: #ffb35d;
+  /* padding: 0.2rem calc((100vw - 1000px) / 2); */
+  padding: 0.5% 0.5%;
+  padding-bottom: 0.75%;
+  height: 85px;
+  z-index: 12;
+  position: sticky; 
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.logo-container {
+  align-items: center;
+  padding-top: 0;
+  padding-left: 1%;
+  width: 90px;
+
+  .image-text {
+    color: rgb(255, 255, 255);
+    font-size: 100%;
+    position: absolute;
+    bottom: 2%;
+    align-items: center;
+    text-decoration: none;
   }
-  to {
-    transform: rotate(360deg);
+  
+}
+
+.logo-container img {
+  align-self: center;
+  height: 100%;
+  width: auto;
+}
+
+
+.links {
+  align-items: right;
+  padding: 1rem 1rem;
+  padding-top: 1.5rem;
+  cursor: pointer;
+  &.active {
+  color: #000000;
+  display: flex;
+  flex-direction: row;
+  width: auto;
   }
+
+  .link {
+    color: #ffffff;
+   
+    text-decoration: none;
+    font-size: 30px;
+    padding: 0 1rem;
+    float: left; /*remove if not using scrollable page*/
+    }
+  .link:hover {
+    color: black;
+    /* Change text color on hover (you can choose any color you like) */
+  }
+}
+
+.section {
+  /* padding: 5% 0%; */ 
+  /* Above is real, bottom is just for testing purposes */
+  padding: 30% 0%;
 }
