--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -73,7 +73,7 @@
     text-decoration: none;
     font-size: 30px;
     padding: 0 1rem;
-    float: left; /*remove if not using scrollable page*/
+    float: left; 
     }
   .link:hover {
     color: black;
