--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -11,6 +11,11 @@
   src: url(./components/fonts/Honk-Regular-VariableFont_MORF\,SHLN.ttf);
 }
 
+@font-face {
+  font-family: bitter;
+  src: url(./components/fonts/Bitter-VariableFont_wght.ttf);
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -90,14 +95,9 @@
 }
 
 
-.Home {
-  background-color: beige;
-}
+.Home { background-color: beige; }
 
-.welcome-container {
-  display: flex;
-
-}
+.welcome-container { display: flex; }
 
 .floating-container {
   padding-top: 3rem;
@@ -138,17 +138,13 @@
   animation-timing-function: ease-in-out;
 }
 
-.logo-home:hover {
-  animation-duration: 1s;
-  
-}
+.logo-home:hover { animation-duration: 1s; }
 
 @keyframes floating {
   0% { transform: translate(0,  0px); }
   50% { transform: translate(0, 15px); }
   100% { transform: translate(0, -0px); }    
 }
-
 
 .welcome-right-container {
   position: relative;
@@ -180,56 +176,7 @@
   margin-bottom: clamp(1rem, 3vw, 5rem);;
 }
 
-button:hover{
-  cursor: pointer;
-}
-
-.based {
-  float: right;
-  width: 100px;
-  font-weight:bold;
-  font-size:36px;
-  text-align: center;
-  text-decoration:none;
-  background-color:#FFA12B;
-  display:block;
-  position:relative;
-  padding:20px 40px;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-shadow: 0px 1px 0px #000;
-  filter: dropshadow(color=#000, offx=0px, offy=1px);
-  
-  -webkit-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  -moz-box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  box-shadow:inset 0 1px 0 #FFE5C4, 0 10px 0 #915100;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-
-.based a:active{
-  top:10px;
-  background-color:#F78900;
-  
-  -webkit-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-  -moz-box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3pxpx 0 #915100;
-  box-shadow:inset 0 1px 0 #FFE5C4, inset 0 -3px 0 #915100;
-}
-
-.based:after{
-  content:"";
-  height:100%;
-  width:100%;
-  padding:4px;
-  position: absolute;
-  bottom:-15px;
-  left:-4px;
-  z-index:-1;
-  background-color:#2B1800;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
+button:hover{ cursor: pointer; }
 
 .Button-apply{
   background-color: rgb(8, 161, 187);
@@ -274,7 +221,6 @@ button:hover{
 .Button-sponsor:hover{
   top:10px;
   background-color: rgb(255, 129, 120);
-  
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
 }
 
@@ -283,11 +229,54 @@ a{
   color: white;
 }
 
-.section {
-  /* padding: 5% 0%; */ 
-  /* Above is real, bottom is just for testing purposes */
-  padding: 30% 0%;
+.about-header-container {
+  padding-top: 3rem;
+  padding-bottom: 4%;
+  align-content: center;
+  text-align: center;
+  font-family: bitter;
+  font-variant: small-caps;
+  font-size: clamp(1rem, 3vw, 4rem);
+  color: #9f3228;
 }
+
+.about-section-title {
+  font-family: bitter;
+  font-size: clamp(1rem, 2vw, 2rem);
+  font-variant: small-caps;
+  color: #28779f;
+  margin-bottom: 100px;
+}
+
+.about-horizontal {
+  display: grid;
+  grid-auto-flow: column;
+  /* grid-auto-columns: 25%; */
+  padding: 2%;
+  padding-top: 2rem;
+  margin-inline: 10%;
+  justify-content: space-between;
+  background-color: #c4eaff;
+
+
+  overflow: scroll;
+  scrollbar-color: white;
+  .img-padding {
+    padding-right: 0.5rem;
+  }
+}
+
+.about-horizontal img {
+  width: clamp(4rem, 11vw, 13rem);
+  /* max-width: clamp(10rem, 25vw, 25rem); */
+  border-radius: 10%;
+  border-color: #000;
+  border-width: 1px;
+  border-style: double;
+  background-color: rgb(198, 198, 198); 
+}
+
+
 
 .login-container {
   /* background-color: #a6cbf8; */
