--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -405,6 +405,25 @@ a {
   } 
 }
 
+.disabledButton {
+  color: rgb(81, 86, 89);
+  font-weight: 700;
+  font-size: 14px;
+  letter-spacing: 1px;
+  background-color: rgb(143, 141, 141);
+  padding: 10px 20px;
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 27px;
+  font-family: 'Ubuntu', sans-serif;
+  cursor: pointer;
+}
+
 .About{
   background-color: white;
 }
