Restyling, social icons, apply now button

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,9 +1,14 @@
 .app {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  background-color: rgb(160, 213, 244);
+  background-image: url(./components/pictures/Blue-Purple_background.png);
+  background-attachment: fixed;
+  background-position: center; 
+  box-shadow: 0 0 5px 10px #555;
 }
 
 .App {
-  padding: 2% 5%;
+  padding: 3% 5%;
 }
 
 @font-face {
@@ -21,25 +26,17 @@
   src: url(./components/fonts/Minecraft.ttf);
 }
 
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-  
+@keyframes floating {
+  0% { transform: translate(0,  0px); }
+  50% { transform: translate(0, 15px); }
+  100% { transform: translate(0, -0px); }    
 }
 
 .navbar {
-  background: none;
+  background: white;
   /* padding: 0.2rem calc((100vw - 1000px) / 2); */
-  padding: 0.25% 1%;
-  padding-bottom: 2%;
-  max-height: clamp(3rem, 3vw, 5rem);
+  padding: 1% 1% 0.25%;
+  max-height: clamp(4rem, 5vw, 7rem);
   z-index: 12;
   position: sticky; 
   top: 0;
@@ -47,123 +44,154 @@
   flex: auto;
   justify-content: space-between;
 
-}
-
-.logo-container {
-  align-content: center;
-  padding-top: 2%;
-  padding-left: 1%;
-  padding-right: 5%;
-  max-width: clamp(10rem, 7vw, 15rem);
-  display: flex;
-  flex: auto;
-  justify-content: center;
-
-  /* font-size: clamp(2rem, 5vw, 4rem); */
-
-  /* .image-text {
-    color: rgb(255, 255, 255);
-    font-size: 100%;
-    position: absolute;
-    bottom: 2%;
-    align-items: center;
-    text-decoration: none;
-  } */
+  .logo-container {
+    align-content: center;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    padding-left: 1%;
+    padding-right: 5%;
+    max-width: clamp(10rem, 10vw, 15rem);
+    min-width: 8rem;
+    align-self: center;
+  }
   
-}
-
-.logo-container img {
-  align-self: center;
-  width: 100%;
-}
-
-
-.links {
-  align-items: right;
-  padding: 1rem 1rem;
-  padding-top: 1.5rem;
-  cursor: pointer;
-  justify-content: space-around;
-  display: flex;
-
-  .link {
-    color: #0081A7;
-    font-family: bitter;
-    font-weight: bold;
-    font-variant: small-caps;
-    text-decoration: none;
-    font-size: clamp(1.25rem, 1.75vw, 2rem);
-    padding: 0 1rem;
-    float: left; 
+  .logo-container img {
+    align-self: center;
+    width: 100%;
+  }
+  
+  .links {
+    align-items: flex-end;
+    padding: 3rem 1rem 1rem; /* top, x, bottom */
+    cursor: pointer;
+    justify-content: space-around;
+    display: flex;
+  
+    .link {
+      color: #0081A7;
+      font-family: bitter;
+      font-weight: bold;
+      font-variant: small-caps;
+      text-decoration: none;
+      height: clamp(1rem, 3vw, 5rem);
+      font-size: clamp(1.25rem, 1.75vw, 2rem);
+      padding: 0 clamp(0.5rem, 0.75vw, 1rem);
+      display: inline-block;
+      vertical-align: middle;
+      white-space: nowrap;
+      }
+    .link:hover {
+      color: #2edaed;
+      /* Change text color on hover (you can choose any color you like) */
     }
-  .link:hover {
-    color: black;
-    /* Change text color on hover (you can choose any color you like) */
+
+    .apply {
+      height: clamp(2rem, 3vw, 8rem);
+      background-color: #fefeaa;
+      font-size: fit-content;
+      color: rgb(255, 126, 74);
+
+      padding: 0.25rem 0.5rem;
+      /* text-shadow: 0px 1px 0px #000; */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 5px;
+      border-color: #f5c499;
+      border-style: solid;
+      border-width: 0.2vw;
+    }
+
+    .apply:hover {
+      color: black;
+    }
+  }
+
+  .dynamic {
+    padding: 0;
+    column-gap: 2rem;
   }
 }
 
+.Home { 
+  background-color: white; 
+  padding: 1rem 2rem;
+  border-radius: 25px;
 
-.Home { background-color: beige; }
 
-.welcome-container { display: flex; }
+  .welcome-container { 
+    display: flex; 
 
-.floating-container {
-  padding-top: 3rem;
-  align-content: center;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  width: 85%;
-  /* background-color: rgb(138, 182, 168); */
-}
+    .floating-container {
+      padding-top: 2rem;
+      align-content: center;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      width: 85%;
+      /* background-color: rgb(138, 182, 168); */
+    }
 
-.home-title {
-  align-self: center;
-  font-family: bitter;
-  font-variant: small-caps;
-  font-size: clamp(2rem, 4vw, 4rem);
-  color: #0081A7;
-  max-width: 800px;
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
+    .home-title {
+      align-self: center;
+      font-family: bitter;
+      font-variant: small-caps;
+      font-size: clamp(2rem, 4vw, 4rem);
+      color: #0081A7;
+      max-width: 800px;
+      animation-name: floating;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+    }
 
-.logo-home-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-}
+    .logo-home-container {
+      position: relative;
+      display: flex;
+      justify-content: center;
+    }
 
-.logo-home {
-  padding-bottom: 2rem;
-  /* max-height: clamp(10rem, 15vw, 22rem); */
-  max-width: clamp(20rem, 50vw, 50rem);
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-}
+    .logo-home {
+      padding-bottom: 2rem;
+      /* max-height: clamp(10rem, 15vw, 22rem); */
+      max-width: clamp(20rem, 50vw, 50rem);
+      animation-name: floating;
+      animation-duration: 3s;
+      animation-iteration-count: infinite;
+      animation-timing-function: ease-in-out;
+    }
 
-.logo-home:hover { animation-duration: 1s; }
+    .logo-home:hover { animation-duration: 1s; }
 
-@keyframes floating {
-  0% { transform: translate(0,  0px); }
-  50% { transform: translate(0, 15px); }
-  100% { transform: translate(0, -0px); }    
-}
+    .welcome-right-container {
+      position: relative;
+      justify-content: center;
+      display: flex;
+      flex-direction: column;
+      align-content: center;
+      padding-top: 10%;
+      padding-right: 0.75rem;
+    }
+  }
 
-.welcome-right-container {
-  position: relative;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  width: 80%;
-  padding-top: clamp(1rem, 3vw, 8rem);
-  margin-top: 20px;
-  padding-left: 5%;
+  .socials {
+    position: relative;
+    justify-content: right;
+    display: flex;
+
+    .icons {
+      padding: 0rem 0.5rem;
+      color: rgb(216, 121, 216);
+      height: 40px;
+    }
+
+    .icons:hover {
+      border-radius: 5px;
+      color: rgb(65, 0, 170);
+      cursor: pointer;
+    }
+  }
+
 }
 
 .Button{
@@ -175,13 +203,12 @@
   margin: 0.2rem;
   text-decoration: none;
   font-family: bitter;
-  font-size: clamp(1rem, 3vw, 7rem);
+  font-size: clamp(1rem, 2vw, 2rem);
   font-variant: small-caps;
 
-  color: whi;
-  width: clamp(4rem, 30vw, 30rem);
-  height: clamp(5rem, 8vw, 10rem);
-  padding-right: 5%;
+  color: white;
+  width: clamp(4rem, 25vw, 25rem);
+  height: clamp(3rem, 5vw, 7rem);
   margin-bottom: clamp(1rem, 3vw, 5rem);;
 }
 
@@ -190,12 +217,9 @@ button:hover{ cursor: pointer; }
 .Button-apply{
   background-color: #00AFB9;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-shadow: 0px 0.5px 0px #ffffff;
   filter: dropshadow(color=#000, offx=0px, offy=1px);
   position: relative;
-  
   -webkit-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
-
   border-radius: 5px;
   border-color: #22457d;
   border-style: solid;
@@ -205,7 +229,6 @@ button:hover{ cursor: pointer; }
 .Button-apply:hover{
   top:10px;
   background-color: rgb(13, 99, 137);
-  
   -webkit-box-shadow:inset 0 2px 0 #c4eaff, inset 0 0px 0 #00424b;
 }
 
@@ -213,14 +236,9 @@ button:hover{ cursor: pointer; }
   background-color: #F07167;
   padding: 0.5rem 0.5rem;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  text-shadow: 0px 1px 0px #000;
   filter: dropshadow(color=#000, offx=0px, offy=1px);
   position: relative;
-  
   -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
-  /* -moz-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
-  box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b; */
-  
   border-radius: 5px;
   border-color: #712020;
   border-style: solid;
@@ -231,6 +249,129 @@ button:hover{ cursor: pointer; }
   top:10px;
   background-color: #af4445;
   -webkit-box-shadow:inset 0 2px 0 #ffcbcb, inset 0 0px 0 #ba3d1b;
+}
+
+a { text-decoration: none; }
+
+.About{
+  background-color: white;
+  margin-top: 2rem;
+  padding: 2rem 2rem;
+  border-radius: 25px;
+
+  .mission-container{
+    display: inline;
+  }
+  
+  .who-we-are-container{
+    display: flex;
+    width: 100%;
+  }
+  
+  .who-we-are-child-container{
+    flex: 1;
+    max-height: 300px;
+  }
+  
+  .collaborators-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    gap: 1em;
+  }
+  
+  .logo-who-we-are{
+    max-width: 75%;
+  }
+  
+  .team-container{
+    display: flex;
+    width: 100%;
+  }
+  
+  
+  .team-child-container{
+    flex: 1;
+  }
+  
+  .headshot{
+    width: 100%;
+  }
+  
+  .committeeMembers-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: center;
+    gap: 1em;
+  }
+  
+  .btn-committee-names button{
+    background-color: darkgray;
+    border:1px solid gray;
+    color: #000;
+    cursor:pointer;
+    display: block;
+    padding: 10px 24px;
+    width: 50%;
+  }
+  
+  .btn-committee-names:not(:last-child){
+    border-bottom: none;
+  }
+  
+  .btn-committee-names button:hover{
+    background-color: rgb(68, 68, 68);
+  }
+  
+  .about-header-container {
+    padding-top: 3rem;
+    padding-bottom: 4%;
+    align-content: center;
+    text-align: center;
+    font-family: minecraft;
+    font-variant: small-caps;
+    font-size: clamp(1rem, 3vw, 4rem);
+    color: #9f3228;
+  }
+  
+  .about-section-title {
+    font-family: minecraft;
+    font-size: clamp(1rem, 2vw, 2rem);
+    font-variant: small-caps;
+    color: #28779f;
+    margin-bottom: 100px;
+    font-weight: 10rem;
+  }
+  
+  .about-horizontal {
+    display: grid;
+    grid-auto-flow: column;
+    /* grid-auto-columns: 25%; */
+    padding: 2%;
+    padding-top: 2rem;
+    margin-inline: 10%;
+    justify-content: space-between;
+    background-color: #c4eaff;
+  
+  
+    overflow: scroll;
+    scrollbar-color: white;
+    .img-padding {
+      padding-right: 0.5rem;
+    }
+  }
+  
+  .about-horizontal img {
+    width: clamp(4rem, 11vw, 13rem);
+    /* max-width: clamp(10rem, 25vw, 25rem); */
+    border-radius: 10%;
+    border-color: #000;
+    border-width: 1px;
+    border-style: double;
+    background-color: rgb(198, 198, 198); 
+  }
 }
 
 .Button-sponsor-page{
@@ -264,84 +405,24 @@ button:hover{ cursor: pointer; }
   padding-right: 1rem;
 }
 
-a {
-  text-decoration: none;
-}
-
-.about-header-container {
-  padding-top: 3rem;
-  padding-bottom: 4%;
-  align-content: center;
-  text-align: center;
-  font-family: minecraft;
-  font-variant: small-caps;
-  font-size: clamp(1rem, 3vw, 4rem);
-  color: #9f3228;
-}
-
-.about-section-title {
-  font-family: minecraft;
-  font-size: clamp(1rem, 2vw, 2rem);
-  font-variant: small-caps;
-  color: #28779f;
-  margin-bottom: 100px;
-  font-weight: 10rem;
-}
-
-.about-horizontal {
-  display: grid;
-  grid-auto-flow: column;
-  /* grid-auto-columns: 25%; */
-  padding: 2%;
-  padding-top: 2rem;
-  margin-inline: 10%;
-  justify-content: space-between;
-  background-color: #c4eaff;
-
-
-  overflow: scroll;
-  scrollbar-color: white;
-  .img-padding {
-    padding-right: 0.5rem;
+.FAQ {
+  .faq-collapse-container {
+    border: none;
+    background: rgb(211, 228, 255);
+    font-family: minecraft;
+    margin-bottom: 2rem;
   }
-}
-
-.about-horizontal img {
-  width: clamp(4rem, 11vw, 13rem);
-  /* max-width: clamp(10rem, 25vw, 25rem); */
-  border-radius: 10%;
-  border-color: #000;
-  border-width: 1px;
-  border-style: double;
-  background-color: rgb(198, 198, 198); 
-}
-
-.faq-collapse-container {
-  /* margin-bottom: 24px; */
-  /* background: token.colorFillAlter; */
-  /* border-radius: ; */
-  border: none;
-  background: rgb(211, 228, 255);
-  font-family: minecraft;
-  margin-bottom: 2rem;
-}
-
-.faq-collapse {
-  border: none;
-  padding-left: 4rem;
-  display: flex;
-  font-family: 'Lucida Sans'
-  /* background: rgb(211, 228, 255); */
-  /* border-bottom: #000; */
-
+  
+  .faq-collapse {
+    border: none;
+    padding-left: 4rem;
+    display: flex;
+    font-family: 'Lucida Sans'
+  }
 }
 
 
 .login-container {
-  /* background-color: #a6cbf8; */
-  /* outline-color: #a6cbf8;
-  outline-style: dashed; */
-
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 1rem 2rem;
   align-self: center;
@@ -403,75 +484,4 @@ a {
     flex-direction: column;
     align-self: center;
   } 
-}
-
-.About{
-  background-color: white;
-}
-
-.mission-container{
-  display: inline;
-}
-
-.who-we-are-container{
-  display: flex;
-  width: 100%;
-}
-
-.who-we-are-child-container{
-  flex: 1;
-  max-height: 300px;
-}
-
-.collaborators-container{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
-  gap: 1em;
-}
-
-.logo-who-we-are{
-  max-width: 75%;
-}
-
-.team-container{
-  display: flex;
-  width: 100%;
-
-}
-
-
-.team-child-container{
-  flex: 1;
-}
-
-.headshot{
-  width: 100%;
-}
-
-.committeeMembers-container{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  align-items: center;
-  gap: 1em;
-}
-
-.btn-committee-names button{
-  background-color: darkgray;
-  border:1px solid gray;
-  color: #000;
-  cursor:pointer;
-  display: block;
-  padding: 10px 24px;
-  width: 50%;
-}
-
-.btn-committee-names:not(:last-child){
-  border-bottom: none;
-}
-
-.btn-committee-names button:hover{
-  background-color: rgb(68, 68, 68);
 }
