--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -165,6 +165,15 @@
 
     .logo-home:hover { animation-duration: 1s; }
 
+    .home-date {
+      align-self: center;
+      font-family: bitter;
+      font-variant: small-caps;
+      font-size: clamp(2rem, 4vw, 4rem);
+      color: #b751c5;
+      max-width: 800px;
+    }
+
     .welcome-right-container {
       position: relative;
       justify-content: center;
@@ -172,6 +181,7 @@
       flex-direction: column;
       align-content: center;
       padding-top: 10%;
+      padding-bottom: 2.5%;
       padding-right: 0.75rem;
     }
   }
@@ -227,7 +237,7 @@ button:hover{ cursor: pointer; }
 
 .Button-interest{
   background-color: #00AFB9;
-  -webkit-box-shadow:inset 0 1px 0 #c4eaff, 0 10px 0 #00424b;
+  -webkit-box-shadow:inset 0 1px 0 #00AFB9, 0 10px 0 #00424b;
   border-color: #22457d;
 }
 
@@ -240,7 +250,7 @@ button:hover{ cursor: pointer; }
 .Button-apply{
   background-color: #fefeaa;
   color: black;
-  -webkit-box-shadow:inset 0 1px 0 #fff7df, 0 10px 0 #f4c671;
+  -webkit-box-shadow:inset 0 1px 0 #fefeaa, 0 10px 0 #f4c671;
   border-color: #f5c499;
 }
 
@@ -252,7 +262,7 @@ button:hover{ cursor: pointer; }
 
 .Button-sponsor{
   background-color: #F07167;
-  -webkit-box-shadow:inset 0 1px 0 #ffcbcb, 0 10px 0 #441305;
+  -webkit-box-shadow:inset 0 1px 0 #F07167, 0 10px 0 #441305;
   border-color: #712020;
 }
 
@@ -434,7 +444,6 @@ a { text-decoration: none; }
   }
 }
 
-
 .login-container {
   background-color: white;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -525,8 +534,6 @@ a { text-decoration: none; }
     border-width: 0.2vw;
   }
 }
-
-
 
 .disabledButton {
   color: rgb(81, 86, 89);
